Se agrego el precio de los departamentos por cada prototipo se envia a producción.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/normalize.css?Ene2" />
-    <link rel="stylesheet" href="./style/main.css?Ene2" />
-    <link rel="stylesheet" href="./style/medias.css?Ene2" />
+    <link rel="stylesheet" href="./style/normalize.css?Jul22" />
+    <link rel="stylesheet" href="./style/main.css?Jul22" />
+    <link rel="stylesheet" href="./style/medias.css?Jul22" />
 
     <!-- Ion Icons -->
     <script
@@ -56,14 +56,17 @@
           <ul>
             <!-- <li><a href="#">Inicio</a></li> -->
             <li>
-              <a href="proyecto.html">Ver Proyecto</a>
+              <a href="./proyecto.html">Ver Proyecto</a>
             </li>
-            <li><a href="proyecto.html#amenidades">Amenidades</a></li>
+            <!-- <li><a href="proyecto.html#amenidades">Amenidades</a></li>
             <li><a href="proyecto.html#planta">Planta</a></li>
             <li><a href="proyecto.html#galeria">Galería</a></li>
-            <li><a href="proyecto.html#avance">Avance de Obra</a></li>
+            <li><a href="proyecto.html#avance">Avance de Obra</a></li> -->
             <li>
-              <a class="menu-link_contacto" href="proyecto.html#contacto"
+              <a
+                target="_blank"
+                class="menu-link_contacto"
+                href="https://wa.me/5217441316969"
                 >Contáctanos</a
               >
             </li>
@@ -93,7 +96,7 @@
           PACÍFICO DIAMANTE, déjate deslumbrar por la belleza del mar y la
           laguna de la Riviera Diamante de Acapulco.
         </p>
-        <a href="proyecto.html">
+        <a href="./proyecto.html">
           <span>Ver proyecto</span>
         </a>
       </div>
@@ -105,29 +108,11 @@
         </p>
       </div>
 
-      <!-- Controles audio -->
-      <!-- <ul class="control_audio">
-        <li>
-          <ion-icon
-            id="muted"
-            class="icon_audio"
-            name="volume-mute-outline"
-          ></ion-icon>
-        </li>
-        <li>
-          <ion-icon
-            id="play"
-            class="icon_audio"
-            name="pause-outline"
-          ></ion-icon>
-        </li>
-      </ul> -->
-
       <!-- Enlaces Redes sociales -->
       <ul class="social">
         <li>
           <a
-            target="_blanck"
+            target="_blank"
             href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
           >
             <ion-icon class="ion_icon" name="logo-facebook"></ion-icon>
@@ -135,7 +120,7 @@
         </li>
         <li>
           <a
-            target="_blanck"
+            target="_blank"
             href="https://www.instagram.com/pacificodiamantemx/"
           >
             <ion-icon
@@ -146,7 +131,7 @@
         </li>
         <li>
           <a
-            target="_blanck"
+            target="_blank"
             href="https://www.youtube.com/channel/UCddmRmV-KMWkDsHuS8y7Emg"
           >
             <ion-icon class="ion_icon youtube" name="logo-youtube"></ion-icon>
@@ -156,7 +141,7 @@
     </section>
 
     <div class="whatsapp">
-      <a target="_blanck" href="https://wa.me/c/5217441316969">
+      <a target="_blank" href="https://wa.me/5217441316969">
         <ion-icon name="logo-whatsapp"></ion-icon>
       </a>
     </div>
@@ -166,14 +151,17 @@
       <ul>
         <!-- <li><a href="index.html">Inicio</a></li> -->
         <li>
-          <a href="proyecto.html">Ver Proyecto</a>
+          <a href="./proyecto.html">Ver Proyecto</a>
         </li>
-        <li><a href="proyecto.html#amenidades">Amenidades</a></li>
+        <!-- <li><a href="proyecto.html#amenidades">Amenidades</a></li>
         <li><a href="proyecto.html#planta">Planta</a></li>
         <li><a href="proyecto.html#galeria">Galería</a></li>
-        <li><a href="proyecto.html#avance">Avance de Obra</a></li>
+        <li><a href="proyecto.html#avance">Avance de Obra</a></li> -->
         <li>
-          <a class="menu-link_contacto" href="proyecto.html#contacto"
+          <a
+            class="menu-link_contacto"
+            target="_blank"
+            href="https://wa.me/5217441316969"
             >Contáctanos</a
           >
         </li>
