Se hacen modificaciones en la seccion de la galeria, seagregan nuevas imagenes, se hacen modificaciones en la seccion de avance de obra, se modifica la seccion para agregar mas imagenes del avance de obra, se envia a produccion

--- a/index.html
+++ b/index.html
@@ -2,171 +2,132 @@
 
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- "favicon" icon of the page -->
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- icon for apple ios -->
-    <link rel="apple-touch-icon" href="./img/favicon.png" />
+  <!-- "favicon" icon of the page -->
+  <link rel="shortcut icon" href="./img/favicon.png" type="image/png" />
 
-    <!-- icon for android cel -->
-    <link rel="manifest" href="manifest.webmanifest" />
+  <!-- icon for apple ios -->
+  <link rel="apple-touch-icon" href="./img/favicon.png" />
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="./style/normalize.css?Jul22" />
-    <link rel="stylesheet" href="./style/main.css?Jul22" />
-    <link rel="stylesheet" href="./style/medias.css?Jul22" />
+  <!-- icon for android cel -->
+  <link rel="manifest" href="manifest.webmanifest" />
 
-    <!-- Ion Icons -->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
+  <!-- CSS -->
+  <link rel="stylesheet" href="./style/normalize.css?Ene23_3" />
+  <link rel="stylesheet" href="./style/main.css?Ene23_3" />
+  <link rel="stylesheet" href="./style/medias.css?Ene23_3" />
 
-    <title>Pacífico Diamante | ¡El mejor momento para invertir es ahora!</title>
-    <!-- Etiqueta meta descripción -->
-    <meta
-      name="description"
-      content="RESIDENCIAL PACIFICO DIAMANTE es más que un lugar para vivir y vacacionar, es un lugar en donde volverás a descubrir, sentir y soñar, rodeado de la deslumbrante belleza entre la laguna y el mar de la Riviera Diamante de Acapulco. | Departamentos en venta y renta | Departamentos de Lujo en Acapulco | Playa Bonfil | Barra Vieja"
-    />
-  </head>
+  <!-- Ion Icons -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-  <body>
-    <section class="showcase">
-      <header>
-        <!-- Logo -->
-        <div class="logo">
-          <img
-            class="logo_img"
-            src="/img/logo.png"
-            alt="Logo Pacífico Diamante Residencial"
-          />
-        </div>
+  <title>Pacífico Diamante | ¡El mejor momento para invertir es ahora!</title>
+  <!-- Etiqueta meta descripción -->
+  <meta name="description"
+    content="RESIDENCIAL PACIFICO DIAMANTE es más que un lugar para vivir y vacacionar, es un lugar en donde volverás a descubrir, sentir y soñar, rodeado de la deslumbrante belleza entre la laguna y el mar de la Riviera Diamante de Acapulco. | Departamentos en venta y renta | Departamentos de Lujo en Acapulco | Playa Bonfil | Barra Vieja" />
+</head>
 
-        <!-- Menú Barra -->
-        <nav class="nav_menu">
-          <ul>
-            <!-- <li><a href="#">Inicio</a></li> -->
-            <li>
-              <a href="./proyecto.html">Ver Proyecto</a>
-            </li>
-            <!-- <li><a href="proyecto.html#amenidades">Amenidades</a></li>
+<body>
+  <section class="showcase">
+    <header>
+      <!-- Logo -->
+      <div class="logo">
+        <img class="logo_img" src="/img/logo.png" alt="Logo Pacífico Diamante Residencial" />
+      </div>
+
+      <!-- Menú Barra -->
+      <nav class="nav_menu">
+        <ul>
+          <!-- <li><a href="#">Inicio</a></li> -->
+          <li>
+            <a href="./proyecto.html">Ver Proyecto</a>
+          </li>
+          <!-- <li><a href="proyecto.html#amenidades">Amenidades</a></li>
             <li><a href="proyecto.html#planta">Planta</a></li>
             <li><a href="proyecto.html#galeria">Galería</a></li>
             <li><a href="proyecto.html#avance">Avance de Obra</a></li> -->
-            <li>
-              <a
-                target="_blank"
-                class="menu-link_contacto"
-                href="https://wa.me/5217441316969"
-                >Contáctanos</a
-              >
-            </li>
-          </ul>
-        </nav>
-        <div class="btn_menu"></div>
-      </header>
+          <li>
+            <a target="_blank" class="menu-link_contacto" href="https://wa.me/5217441316969">Contáctanos</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="btn_menu"></div>
+    </header>
 
-      <!-- Video -->
-      <video
-        id="video"
-        src="/img/Secuencia01.mp4"
-        muted
-        controls
-        autoplay
-        poster="/img/alberca.jpeg"
-      ></video>
+    <!-- Video -->
+    <video id="video" src="/img/Secuencia01.mp4" muted controls autoplay poster="/img/alberca.jpeg"></video>
 
-      <!-- Overlay apoyo para el menú responsive -->
-      <div class="overlay"></div>
+    <!-- Overlay apoyo para el menú responsive -->
+    <div class="overlay"></div>
 
-      <!-- Eslogan -->
-      <div class="text">
-        <h2>Isla Tortuga</h2>
-        <h3>¡El momento de invertir es ahora!</h3>
-        <p>
-          PACÍFICO DIAMANTE, déjate deslumbrar por la belleza del mar y la
-          laguna de la Riviera Diamante de Acapulco.
-        </p>
-        <a href="./proyecto.html">
-          <span>Ver proyecto</span>
-        </a>
-      </div>
-
-      <div class="mensaje_video">
-        <p>
-          Para una mejor experiencia de video, coloca tu móvil de forma
-          horizontal
-        </p>
-      </div>
-
-      <!-- Enlaces Redes sociales -->
-      <ul class="social">
-        <li>
-          <a
-            target="_blank"
-            href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
-          >
-            <ion-icon class="ion_icon" name="logo-facebook"></ion-icon>
-          </a>
-        </li>
-        <li>
-          <a
-            target="_blank"
-            href="https://www.instagram.com/pacificodiamantemx/"
-          >
-            <ion-icon
-              class="ion_icon instagram"
-              name="logo-instagram"
-            ></ion-icon>
-          </a>
-        </li>
-        <li>
-          <a
-            target="_blank"
-            href="https://www.youtube.com/channel/UCddmRmV-KMWkDsHuS8y7Emg"
-          >
-            <ion-icon class="ion_icon youtube" name="logo-youtube"></ion-icon>
-          </a>
-        </li>
-      </ul>
-    </section>
-
-    <div class="whatsapp">
-      <a target="_blank" href="https://wa.me/5217441316969">
-        <ion-icon name="logo-whatsapp"></ion-icon>
+    <!-- Eslogan -->
+    <div class="text">
+      <h2>Isla Tortuga</h2>
+      <h3>¡El momento de invertir es ahora!</h3>
+      <p>
+        PACÍFICO DIAMANTE, déjate deslumbrar por la belleza del mar y la
+        laguna de la Riviera Diamante de Acapulco.
+      </p>
+      <a href="./proyecto.html">
+        <span>Ver proyecto</span>
       </a>
     </div>
 
-    <!-- Menú responsive - Hamburguesa -->
-    <div class="menu">
-      <ul>
-        <!-- <li><a href="index.html">Inicio</a></li> -->
-        <li>
-          <a href="./proyecto.html">Ver Proyecto</a>
-        </li>
-        <!-- <li><a href="proyecto.html#amenidades">Amenidades</a></li>
+    <div class="mensaje_video">
+      <p>
+        Para una mejor experiencia de video, coloca tu móvil de forma
+        horizontal
+      </p>
+    </div>
+
+    <!-- Enlaces Redes sociales -->
+    <ul class="social">
+      <li>
+        <a target="_blank" href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418">
+          <ion-icon class="ion_icon" name="logo-facebook"></ion-icon>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://www.instagram.com/pacificodiamantemx/">
+          <ion-icon class="ion_icon instagram" name="logo-instagram"></ion-icon>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://www.youtube.com/channel/UCddmRmV-KMWkDsHuS8y7Emg">
+          <ion-icon class="ion_icon youtube" name="logo-youtube"></ion-icon>
+        </a>
+      </li>
+    </ul>
+  </section>
+
+  <div class="whatsapp">
+    <a target="_blank" href="https://wa.me/5217441316969">
+      <ion-icon name="logo-whatsapp"></ion-icon>
+    </a>
+  </div>
+
+  <!-- Menú responsive - Hamburguesa -->
+  <div class="menu">
+    <ul>
+      <!-- <li><a href="index.html">Inicio</a></li> -->
+      <li>
+        <a href="./proyecto.html">Ver Proyecto</a>
+      </li>
+      <!-- <li><a href="proyecto.html#amenidades">Amenidades</a></li>
         <li><a href="proyecto.html#planta">Planta</a></li>
         <li><a href="proyecto.html#galeria">Galería</a></li>
         <li><a href="proyecto.html#avance">Avance de Obra</a></li> -->
-        <li>
-          <a
-            class="menu-link_contacto"
-            target="_blank"
-            href="https://wa.me/5217441316969"
-            >Contáctanos</a
-          >
-        </li>
-      </ul>
-    </div>
-    <script src="./js/main.js"></script>
-  </body>
+      <li>
+        <a class="menu-link_contacto" target="_blank" href="https://wa.me/5217441316969">Contáctanos</a>
+      </li>
+    </ul>
+  </div>
+  <script src="./js/main.js"></script>
+</body>
+
 </html>
