Se agrego el carrusel del avance de obra del mes de febrero 23, se envia a produccion

--- a/proyecto.html
+++ b/proyecto.html
@@ -459,6 +459,7 @@
 
         </div>
       </div>
+
       <div class="avance__obra">
         <h2>enero 23</h2>
         <div class="carrusel__obra carrtres">
@@ -479,6 +480,37 @@
             </span>
           </button>
           <button class="slider__btn slider__btn--right" type="button" id="rightTres">
+            <span class="btn-span">
+              <ion-icon name="chevron-forward-outline"></ion-icon>
+            </span>
+          </button>
+        </div>
+      </div>
+
+
+    </div>
+
+    <div class="contenedor__avance-obra">
+      <div class="avance__obra">
+        <h2>febrero 23</h2>
+        <div class="carrusel__obra carrtres">
+
+          <div id="ccuatro" class="carrusel">
+            <img src="/img/proyecto/avance/obra_02_23-1.jpeg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img loading="lazy" src="/img/proyecto/avance/obra_02_23-2.jpeg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img loading="lazy" src="/img/proyecto/avance/obra_02_23-3.jpeg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+          </div>
+
+
+          <button class="slider__btn slider__btn--left" type="button" id="leftcuatro">
+            <span class="btn-span">
+              <ion-icon name="chevron-back-outline"></ion-icon>
+            </span>
+          </button>
+          <button class="slider__btn slider__btn--right" type="button" id="rightcuatro">
             <span class="btn-span">
               <ion-icon name="chevron-forward-outline"></ion-icon>
             </span>
