--- a/proyecto.html
+++ b/proyecto.html
@@ -1,5 +1,3 @@
-<!-- @format -->
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -517,6 +515,61 @@
           </button>
         </div>
       </div>
+
+      <div class="avance__obra">
+        <h2>marzo 23</h2>
+        <div class="carrusel__obra carrtres">
+
+          <div id="ccinco" class="carrusel">
+            <img src="/img/proyecto/avance/obra_03_23-2.jpg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img loading="lazy" src="/img/proyecto/avance/obra_03_23-1.jpg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img loading="lazy" src="/img/proyecto/avance/obra_03_23-3.jpg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+          </div>
+
+
+          <button class="slider__btn slider__btn--left" type="button" id="leftcinco">
+            <span class="btn-span">
+              <ion-icon name="chevron-back-outline"></ion-icon>
+            </span>
+          </button>
+          <button class="slider__btn slider__btn--right" type="button" id="rightcinco">
+            <span class="btn-span">
+              <ion-icon name="chevron-forward-outline"></ion-icon>
+            </span>
+          </button>
+        </div>
+      </div>
+
+      <div class="avance__obra">
+        <h2>abril 23</h2>
+        <div class="carrusel__obra carrtres">
+
+          <div id="cseis" class="carrusel">
+            <img loading="lazy" src="/img/proyecto/avance/obra_04_23-1.jpeg"
+            alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img src="/img/proyecto/avance/obra_04_23.jpeg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img loading="lazy" src="/img/proyecto/avance/obra_04_23-2.jpeg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+          </div>
+
+
+          <button class="slider__btn slider__btn--left" type="button" id="leftseis">
+            <span class="btn-span">
+              <ion-icon name="chevron-back-outline"></ion-icon>
+            </span>
+          </button>
+          <button class="slider__btn slider__btn--right" type="button" id="rightseis">
+            <span class="btn-span">
+              <ion-icon name="chevron-forward-outline"></ion-icon>
+            </span>
+          </button>
+        </div>
+      </div>
+      
     </div>
 
   </section>
