--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="apple-touch-icon" href="./img/favicon.png" />
 
   <!-- icon for android cel -->
-  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="manifest" href="./manifest.webmanifest" />
 
   <!-- CSS -->
   <link rel="stylesheet" href="./style/normalize.css?Ene23_3" />
