se creo el carrusel del avance de obra del mes de mayo 23

--- a/proyecto.html
+++ b/proyecto.html
@@ -569,6 +569,36 @@
       
     </div>
 
+    <div class="contenedor__avance-obra">
+      <div class="avance__obra">
+        <h2>mayo 23</h2>
+        <div class="carrusel__obra carrtres">
+
+          <div id="csiete" class="carrusel">
+            <img src="/img/proyecto/avance/obra_05_23-01.jpg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img loading="lazy" src="/img/proyecto/avance/obra_05_23-2.jpg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img loading="lazy" src="/img/proyecto/avance/obra_05_23-3.jpg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+          </div>
+
+
+          <button class="slider__btn slider__btn--left" type="button" id="leftsiete">
+            <span class="btn-span">
+              <ion-icon name="chevron-back-outline"></ion-icon>
+            </span>
+          </button>
+          <button class="slider__btn slider__btn--right" type="button" id="rightsiete">
+            <span class="btn-span">
+              <ion-icon name="chevron-forward-outline"></ion-icon>
+            </span>
+          </button>
+        </div>
+      </div>
+      
+    </div>
+
   </section>
 
   <!-- Sección Footer -->
