--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <link rel="apple-touch-icon" href="./img/favicon.png" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="./style/normalize.css?Ene23_3" />
-  <link rel="stylesheet" href="./style/main.css?Ene23_3" />
-  <link rel="stylesheet" href="./style/medias.css?Ene23_3" />
+  <link rel="stylesheet" href="./style/normalize.css?Jun_23" />
+  <link rel="stylesheet" href="./style/main.css?Jun_23" />
+  <link rel="stylesheet" href="./style/medias.css?Jun_23" />
 
   <!-- Ion Icons -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
