--- a/proyecto.html
+++ b/proyecto.html
@@ -13,10 +13,10 @@
   <link rel="apple-touch-icon" href="./img/favicon.png" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="./style/normalize.css?Ene23_3" />
-  <link rel="stylesheet" href="./style/proyecto.css?Ene23_3" />
-  <link rel="stylesheet" href="./style/galeria.css?Ene23_3" />
-  <link rel="stylesheet" href="./style/medias.css?Ene23_3" />
+  <link rel="stylesheet" href="./style/normalize.css?Jun_23" />
+  <link rel="stylesheet" href="./style/proyecto.css?Jun_23" />
+  <link rel="stylesheet" href="./style/galeria.css?Jun_23" />
+  <link rel="stylesheet" href="./style/medias.css?Jun_23" />
 
   <!-- Ion Icons -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
