cambiar imagen del avance de obra del mes de dic 22

--- a/proyecto.html
+++ b/proyecto.html
@@ -433,7 +433,7 @@
         <div class="carrusel__obra carrdos">
 
           <div id="cdos" class="carrusel">
-            <img src="/img/proyecto/avance/obra_1.jpeg" alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <!-- <img src="/img/proyecto/avance/obra_1.jpeg" alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" /> -->
             <img loading="lazy" src="/img/proyecto/avance/obra_2.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
             <img loading="lazy" src="/img/proyecto/avance/obra_3.jpeg"
