se cambiaron algunas imagenes del avance de obra, se optimizaron y se agrego la sección del mes de junio del avance de obra

--- a/proyecto.html
+++ b/proyecto.html
@@ -13,10 +13,10 @@
   <link rel="apple-touch-icon" href="./img/favicon.png" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="./style/normalize.css?Jun_23" />
-  <link rel="stylesheet" href="./style/proyecto.css?Jun_23" />
-  <link rel="stylesheet" href="./style/galeria.css?Jun_23" />
-  <link rel="stylesheet" href="./style/medias.css?Jun_23" />
+  <link rel="stylesheet" href="./style/normalize.css?Jul_23" />
+  <link rel="stylesheet" href="./style/proyecto.css?Jul_23" />
+  <link rel="stylesheet" href="./style/galeria.css?Jul_23" />
+  <link rel="stylesheet" href="./style/medias.css?Jul_23" />
 
   <!-- Ion Icons -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -433,7 +433,7 @@
         <div class="carrusel__obra carrdos">
 
           <div id="cdos" class="carrusel">
-            <!-- <img src="/img/proyecto/avance/obra_1.jpeg" alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" /> -->
+            <img src="/img/proyecto/avance/obra_1.jpeg" alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
             <img loading="lazy" src="/img/proyecto/avance/obra_2.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
             <img loading="lazy" src="/img/proyecto/avance/obra_3.jpeg"
@@ -495,7 +495,7 @@
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
             <img loading="lazy" src="/img/proyecto/avance/obra_02_23-2.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_02_23-3.jpeg"
+            <img loading="lazy" src="/img/proyecto/avance/obra_02_23-3.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
           </div>
 
@@ -545,11 +545,11 @@
         <div class="carrusel__obra carrtres">
 
           <div id="cseis" class="carrusel">
-            <img loading="lazy" src="/img/proyecto/avance/obra_04_23-1.jpeg"
+            <img loading="lazy" src="/img/proyecto/avance/obra_04_23-1.jpg"
             alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img src="/img/proyecto/avance/obra_04_23.jpeg"
+            <img src="/img/proyecto/avance/obra_04_23.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_04_23-2.jpeg"
+            <img loading="lazy" src="/img/proyecto/avance/obra_04_23-2.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
           </div>
 
@@ -590,6 +590,33 @@
             </span>
           </button>
           <button class="slider__btn slider__btn--right" type="button" id="rightsiete">
+            <span class="btn-span">
+              <ion-icon name="chevron-forward-outline"></ion-icon>
+            </span>
+          </button>
+        </div>
+      </div>
+
+      <div class="avance__obra">
+        <h2>junio 23</h2>
+        <div class="carrusel__obra carrtres">
+
+          <div id="cocho" class="carrusel">
+            <img src="/img/proyecto/avance/obra_07_01.jpeg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img loading="lazy" src="/img/proyecto/avance/obra_07_02.jpg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img loading="lazy" src="/img/proyecto/avance/obra_07_03.jpg"
+              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+          </div>
+
+
+          <button class="slider__btn slider__btn--left" type="button" id="leftocho">
+            <span class="btn-span">
+              <ion-icon name="chevron-back-outline"></ion-icon>
+            </span>
+          </button>
+          <button class="slider__btn slider__btn--right" type="button" id="rightocho">
             <span class="btn-span">
               <ion-icon name="chevron-forward-outline"></ion-icon>
             </span>
