se envian actualizacion de trabajo

--- a/proyecto.html
+++ b/proyecto.html
@@ -6,6 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- no hace cache -->
+  <!-- <meta http-equiv="Expires" content="0">
+  <meta http-equiv="Last-Modified" content="0">
+  <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+  <meta http-equiv="Pragma" content="no-cache"> -->
+
   <!-- "favicon" icon of the page -->
   <link rel="shortcut icon" href="./img/favicon.png" type="image/png" />
 
@@ -433,7 +439,7 @@
         <div class="carrusel__obra carrdos">
 
           <div id="cdos" class="carrusel">
-            <img src="/img/proyecto/avance/obra_1.jpeg" alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img src="/img/proyecto/avance/obra_1.jpeg" alt="Obra de Pacífico Diamante Etapa Isla Tortuga" />
             <img loading="lazy" src="/img/proyecto/avance/obra_2.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
             <img loading="lazy" src="/img/proyecto/avance/obra_3.jpeg"
