se actualiza la seccion del avance de obra, con fotos nuevas

--- a/proyecto.html
+++ b/proyecto.html
@@ -408,15 +408,15 @@
     <div class="contenedor__avance-obra">
 
       <div class="avance__obra">
-        <h2>noviembre 22</h2>
+        <h2>4T 2022</h2>
         <div class="carrusel__obra carruno">
           <div id="cuno" class="carrusel">
 
-            <img src="/img/proyecto/avance/11210_Exterior.jpeg"
+            <img src="/img/proyecto/avance/4T22_1.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/12211_Exterior.jpeg"
+            <img loading="lazy" src="/img/proyecto/avance/4T22_2.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/12212_Exterior.jpeg"
+            <img loading="lazy" src="/img/proyecto/avance/4T22_3.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
 
           </div>
@@ -435,14 +435,14 @@
       </div>
 
       <div class="avance__obra">
-        <h2>diciembre 22</h2>
+        <h2>1T 2023</h2>
         <div class="carrusel__obra carrdos">
 
           <div id="cdos" class="carrusel">
-            <img src="/img/proyecto/avance/obra_1.jpeg" alt="Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_2.jpeg"
+            <img src="/img/proyecto/avance/1T23_1.jpeg" alt="Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <img loading="lazy" src="/img/proyecto/avance/1T23_2.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_3.jpeg"
+            <img loading="lazy" src="/img/proyecto/avance/1T23_3.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
           </div>
 
@@ -462,15 +462,15 @@
       </div>
 
       <div class="avance__obra">
-        <h2>enero 23</h2>
+        <h2>2T 2023</h2>
         <div class="carrusel__obra carrtres">
 
           <div id="ctres" class="carrusel">
-            <img src="/img/proyecto/avance/obra_01_23_1.jpeg"
+            <img src="/img/proyecto/avance/2T23_1.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_01_23_2.jpeg"
+            <img loading="lazy" src="/img/proyecto/avance/2T23_2.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_01_23_3.jpeg"
+            <img loading="lazy" src="/img/proyecto/avance/2T23_3.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
           </div>
 
@@ -493,15 +493,15 @@
 
     <div class="contenedor__avance-obra">
       <div class="avance__obra">
-        <h2>febrero 23</h2>
+        <h2>3T 2023</h2>
         <div class="carrusel__obra carrtres">
 
           <div id="ccuatro" class="carrusel">
-            <img src="/img/proyecto/avance/obra_02_23-1.jpeg"
+            <img src="/img/proyecto/avance/3T23_1.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_02_23-2.jpeg"
+            <img loading="lazy" src="/img/proyecto/avance/3T23_2.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_02_23-3.jpg"
+            <img loading="lazy" src="/img/proyecto/avance/3T23_3.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
           </div>
 
@@ -520,15 +520,15 @@
       </div>
 
       <div class="avance__obra">
-        <h2>marzo 23</h2>
+        <h2>4T 2023</h2>
         <div class="carrusel__obra carrtres">
 
           <div id="ccinco" class="carrusel">
-            <img src="/img/proyecto/avance/obra_03_23-2.jpg"
+            <img src="/img/proyecto/avance/4T23_1.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_03_23-1.jpg"
+            <img loading="lazy" src="/img/proyecto/avance/4T23_2.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_03_23-3.jpg"
+            <img loading="lazy" src="/img/proyecto/avance/4T23_3.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
           </div>
 
@@ -547,15 +547,15 @@
       </div>
 
       <div class="avance__obra">
-        <h2>abril 23</h2>
+        <h2>1T 2024</h2>
         <div class="carrusel__obra carrtres">
 
           <div id="cseis" class="carrusel">
-            <img loading="lazy" src="/img/proyecto/avance/obra_04_23-1.jpg"
+            <img loading="lazy" src="/img/proyecto/avance/1T24_1.jpeg"
             alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img src="/img/proyecto/avance/obra_04_23.jpg"
+            <img src="/img/proyecto/avance/1T24_2.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_04_23-2.jpg"
+            <img loading="lazy" src="/img/proyecto/avance/1T24_3.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
           </div>
 
@@ -577,33 +577,17 @@
 
     <div class="contenedor__avance-obra">
       <div class="avance__obra">
-        <h2>mayo 23</h2>
+        <h2>ACTUALIDAD</h2>
         <div class="carrusel__obra carrtres">
 
           <div id="csiete" class="carrusel">
-            <img src="/img/proyecto/avance/obra_05_23-01.jpg"
-              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_05_23-2.jpg"
-              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/obra_05_23-3.jpg"
-              alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
+            <video width="100%" muted autoplay loop poster="img/proyecto/avance/poster.jpg" src="img/proyecto/avance/EnObra_1.mp4"></video>
           </div>
 
-
-          <button class="slider__btn slider__btn--left" type="button" id="leftsiete">
-            <span class="btn-span">
-              <ion-icon name="chevron-back-outline"></ion-icon>
-            </span>
-          </button>
-          <button class="slider__btn slider__btn--right" type="button" id="rightsiete">
-            <span class="btn-span">
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-            </span>
-          </button>
         </div>
       </div>
 
-      <div class="avance__obra">
+      <!-- <div class="avance__obra">
         <h2>junio 23</h2>
         <div class="carrusel__obra carrtres">
 
@@ -628,7 +612,7 @@
             </span>
           </button>
         </div>
-      </div>
+      </div> -->
       
     </div>
 
