se modifica el index y proyecto en los links de los css

--- a/proyecto.html
+++ b/proyecto.html
@@ -19,10 +19,10 @@
   <link rel="apple-touch-icon" href="./img/favicon.png" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="./style/normalize.css?Jul_23" />
-  <link rel="stylesheet" href="./style/proyecto.css?Jul_23" />
-  <link rel="stylesheet" href="./style/galeria.css?Jul_23" />
-  <link rel="stylesheet" href="./style/medias.css?Jul_23" />
+  <link rel="stylesheet" href="./style/normalize.css?Abr_24" />
+  <link rel="stylesheet" href="./style/proyecto.css?Abr_24" />
+  <link rel="stylesheet" href="./style/galeria.css?Abr_24" />
+  <link rel="stylesheet" href="./style/medias.css?Abr_24" />
 
   <!-- Ion Icons -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
