Se cambiaron algunas fotos del avance de obra

--- a/proyecto.html
+++ b/proyecto.html
@@ -410,15 +410,14 @@
       <div class="avance__obra">
         <h2>4T 2022</h2>
         <div class="carrusel__obra carruno">
-          <div id="cuno" class="carrusel">
 
+          <div id="cuno" class="carrusel">
             <img src="/img/proyecto/avance/4T22_1.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
             <img loading="lazy" src="/img/proyecto/avance/4T22_2.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/4T22_3.jpeg"
+            <img loading="lazy" src="/img/proyecto/avance/4T22_3.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-
           </div>
 
           <button class="slider__btn slider__btn--left" type="button" id="leftUno">
@@ -466,11 +465,11 @@
         <div class="carrusel__obra carrtres">
 
           <div id="ctres" class="carrusel">
-            <img src="/img/proyecto/avance/2T23_1.jpeg"
+            <img src="/img/proyecto/avance/2T23_1.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
             <img loading="lazy" src="/img/proyecto/avance/2T23_2.jpg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
-            <img loading="lazy" src="/img/proyecto/avance/2T23_3.jpg"
+            <img loading="lazy" src="/img/proyecto/avance/2T23_3.jpeg"
               alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga" />
           </div>
 
@@ -683,7 +682,7 @@
           </li>
         </ul>
         <p>Diseño y desarrollo Web</p>
-        <a href="https://webcreativa.mx">
+        <a target="_blank" href="https://wa.me/524423897052">
           <div class="webcreativa">
             <img src="/img/proyecto/logo_negativo.svg" alt="webcreativa.mx" />
           </div>
